Удалили в *.html бесполезные классы для скрытия элементов и класс для микса

--- a/source/index.html
+++ b/source/index.html
@@ -25,7 +25,7 @@
             <!-- Accessibility: used aria-expanded and aria-haspopup-->
             <button class="btn-menu main-nav__trigger" type="button" aria-expanded="false" aria-haspopup="true" aria-label="global-menu-button">
               <!-- Accessibility: provided alternative text -->
-              <span class="sr-only visually-hidden hidden-text">Hamburger menu button</span>
+              <span class="sr-only visually-hidden">Hamburger menu button</span>
               <!-- Add pseudo elements -->
               <span class="btn-menu__items"></span>
             </button>
@@ -121,7 +121,7 @@
       <section class="app-review app-review--section-edge">
         <div class="app-review__inner inner">
           <!-- Accessibility: hidden heading -->
-          <h2 class="sr-only visually-hidden hidden-heading">Отзывы пользователей приложения</h2>
+          <h2 class="sr-only visually-hidden">Отзывы пользователей приложения</h2>
           <div class="review app-review__users">
             <ul class="review__list">
               <li class="review__item">
@@ -158,7 +158,7 @@
       <section class="plans">
         <div class="plans__inner inner">
           <!-- Accessibility: hidden heading -->
-          <h2 class="sr-only visually-hidden hidden-heading">Планы и цены приложения</h2>
+          <h2 class="sr-only visually-hidden">Планы и цены приложения</h2>
           <div class="plans__holder">
             <table class="tbl plans__tbl-content">
               <thead class="tbl__header">
@@ -229,9 +229,8 @@
       <div class="homepage-footer__inner inner">
         <div class="contact-us contact-us--section-edge homepage-footer__contact-us">
           <div class="contact-us__heading-holder">
-            <!-- Add Mix title/heading style? -->
-            <h2 class="contact-us__heading-quest title subhead-top">Остались вопросы?</h2>
-            <h2 class="contact-us__heading-exclam title subhead-top">Свяжитесь с нами!</h2>
+            <h2 class="contact-us__heading-quest subhead-top">Остались вопросы?</h2>
+            <h2 class="contact-us__heading-exclam subhead-top">Свяжитесь с нами!</h2>
           </div>
           <div class="contact-us__info-holder">
             <div class="contact-us__phone">
