--- a/source/photo.html
+++ b/source/photo.html
@@ -29,7 +29,7 @@
             <!-- Accessibility: used aria-expanded and aria-haspopup-->
             <button class="btn-menu main-nav__trigger" type="button" aria-expanded="false" aria-haspopup="true" aria-label="global-menu-button">
               <!-- Accessibility: provided alternative text -->
-              <span class="sr-only visually-hidden hidden-text">Hamburger menu button</span>
+              <span class="sr-only visually-hidden">Hamburger menu button</span>
               <span class="btn-menu__items"></span>
             </button>
             <!-- Accessibility: used aria-expanded-->
