Изменили классы subhead-top и subhead-mid на heading и subheading

--- a/source/index.html
+++ b/source/index.html
@@ -35,16 +35,16 @@
                 <ul class="main-nav__list">
                   <!-- Accessibility: used aria-current-->
                   <li class="main-nav__item ">
-                    <a class="main-nav__link subhead-mid" href="#" aria-current="page">Главная</a>
+                    <a class="main-nav__link subheading" href="#" aria-current="page">Главная</a>
                   </li>
                   <li class="main-nav__item">
-                    <a class="main-nav__link subhead-mid" href="photo.html">Фотографии</a>
+                    <a class="main-nav__link subheading" href="photo.html">Фотографии</a>
                   </li>
                   <li class="main-nav__item">
-                    <a class="main-nav__link subhead-mid" href="form.html">Конкурс</a>
+                    <a class="main-nav__link subheading" href="form.html">Конкурс</a>
                   </li>
                   <li class="main-nav__item">
-                    <a class="main-nav__link subhead-mid" href="https://htmlacademy.ru/intensive/adaptive" rel="noopener" rel="nofollow">HTML Academy</a>
+                    <a class="main-nav__link subheading" href="https://htmlacademy.ru/intensive/adaptive" rel="noopener" rel="nofollow">HTML Academy</a>
                   </li>
                 </ul>
               </div>
@@ -57,7 +57,7 @@
           </div>
           <div class="hero__action page-header__btm-action">
             <div class="btn btn--download hero__action-btn" aria-label="download-app-button">
-              <a class="btn__link subhead-mid" href="https://www.apple.com/lae/itunes/working-itunes/market/" rel="noopener" rel="nofollow">Скачать приложение</a>
+              <a class="btn__link subheading" href="https://www.apple.com/lae/itunes/working-itunes/market/" rel="noopener" rel="nofollow">Скачать приложение</a>
             </div>
             <div class="apps hero__action-app">
               <!-- svg app icons -->
@@ -92,22 +92,22 @@
         <div class="features__inner inner">
           <div class="appfeat-heading features__heading features__heading--section-edge">
             <div class="appfeat-heading__holder">
-              <h2 class="appfeat-heading__quest subhead-top">Устали от серости мегаполиса?</h2>
-              <h2 class="appfeat-heading__exclam subhead-top">Нам есть, что вам предложить!</h2>
+              <h2 class="appfeat-heading__quest heading">Устали от серости мегаполиса?</h2>
+              <h2 class="appfeat-heading__exclam heading">Нам есть, что вам предложить!</h2>
             </div>
           </div>
           <div class="appfeat-desc features__desc">
             <ul class="appfeat-desc__list">
               <li class="appfeat-desc__item">
-                <h3 class="appfeat-desc__heading subhead-mid">Поднимает настроение</h3>
+                <h3 class="appfeat-desc__heading subheading">Поднимает настроение</h3>
                 <p class="appfeat-desc__text body-text">Приложение позволит вам победить осеннюю хандру и депрессию буквально в несколько кликов!</p>
               </li>
               <li class="appfeat-desc__item">
-                <h3 class="appfeat-desc__heading subhead-mid">Меняет мир вокруг</h3>
+                <h3 class="appfeat-desc__heading subheading">Меняет мир вокруг</h3>
                 <p class="appfeat-desc__text body-text">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект</p>
               </li>
               <li class="appfeat-desc__item">
-                <h3 class="appfeat-desc__heading subhead-mid">Заводит новых друзей</h3>
+                <h3 class="appfeat-desc__heading subheading">Заводит новых друзей</h3>
                 <p class="appfeat-desc__text body-text">Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и заводите новых</p>
               </li>
             </ul>
@@ -125,15 +125,15 @@
           <div class="review app-review__users">
             <ul class="review__list">
               <li class="review__item">
-                <h3 class="review__item-heading subhead-mid">Николай Петров</h3>
+                <h3 class="review__item-heading subheading">Николай Петров</h3>
                 <p class="review__item-text body-text">&laquo;Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!&raquo;</p>
               </li>
               <li class="review__item">
-                <h3 class="review__item-heading subhead-mid">Николай Петров</h3>
+                <h3 class="review__item-heading subheading">Николай Петров</h3>
                 <p class="review__item-text body-text">&laquo;Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!&raquo;</p>
               </li>
               <li class="review__item">
-                <h3 class="review__item-heading subhead-mid">Николай Петров</h3>
+                <h3 class="review__item-heading subheading">Николай Петров</h3>
                 <p class="review__item-text body-text">&laquo;Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!&raquo;</p>
               </li>
             </ul>
@@ -162,7 +162,7 @@
           <div class="plans__holder">
             <table class="tbl plans__tbl-content">
               <thead class="tbl__header">
-                <tr class="tbl__header-row subhead-mid">
+                <tr class="tbl__header-row subheading">
                   <th class="tbl__header-item" scope="col">
                     База
                   </th>
@@ -173,7 +173,7 @@
                     Анлим
                   </th>
                 </tr>
-                <tr class="tbl__header-row subhead-top">
+                <tr class="tbl__header-row heading">
                   <th class="tbl__header-item" scope="col">
                     1,99 usd
                   </th>
@@ -229,25 +229,25 @@
       <div class="homepage-footer__inner inner">
         <div class="contact-us contact-us--section-edge homepage-footer__contact-us">
           <div class="contact-us__heading-holder">
-            <h2 class="contact-us__heading-quest subhead-top">Остались вопросы?</h2>
-            <h2 class="contact-us__heading-exclam subhead-top">Свяжитесь с нами!</h2>
+            <h2 class="contact-us__heading-quest heading">Остались вопросы?</h2>
+            <h2 class="contact-us__heading-exclam heading">Свяжитесь с нами!</h2>
           </div>
           <div class="contact-us__info-holder">
             <div class="contact-us__phone">
-              <h3 class="contact-us__heading subhead-mid">Звоните:</h3>
+              <h3 class="contact-us__heading subheading">Звоните:</h3>
               <span class="contact-us__info">
-                <a class="contact-us__info-phone subhead-top" href="tel:+78125556666" title="Звоните">+7(812)555-66-66</a>
+                <a class="contact-us__info-phone heading" href="tel:+78125556666" title="Звоните">+7(812)555-66-66</a>
               </span>
             </div>
             <div class="contact-us__email">
-              <h3 class="contact-us__heading subhead-mid">Пишите:</h3>
+              <h3 class="contact-us__heading subheading">Пишите:</h3>
               <span class="contact-us__info">
-                <a class="contact-us__info-email subhead-top" href="mailto:mail@htmlacademy.ru" >mail@htmlacademy.ru</a>
+                <a class="contact-us__info-email heading" href="mailto:mail@htmlacademy.ru" >mail@htmlacademy.ru</a>
               </span>
             </div>
             <div class="contact-us__address">
-              <h3 class="contact-us__heading subhead-mid">Приезжайте в гости:</h3>
-              <span class="contact-us__info-address subhead-top">ул. Большая Конюшенная, 19/8</span>
+              <h3 class="contact-us__heading subheading">Приезжайте в гости:</h3>
+              <span class="contact-us__info-address heading">ул. Большая Конюшенная, 19/8</span>
             </div>
           </div>
 
