--- a/source/photo.html
+++ b/source/photo.html
@@ -37,17 +37,17 @@
               <div class="main-nav__dropdown-inner">
                 <ul class="main-nav__list">
                   <li class="main-nav__item">
-                    <a class="main-nav__link subhead-mid" href="index.html">Главная</a>
+                    <a class="main-nav__link subheading" href="index.html">Главная</a>
                   </li>
                   <!-- Accessibility: used aria-current-->
                   <li class="main-nav__item">
-                    <a class="main-nav__link subhead-mid" href="#" aria-current="page">Фотографии</a>
+                    <a class="main-nav__link subheading" href="#" aria-current="page">Фотографии</a>
                   </li>
                   <li class="main-nav__item">
-                    <a class="main-nav__link subhead-mid" href="form.html">Конкурс</a>
+                    <a class="main-nav__link subheading" href="form.html">Конкурс</a>
                   </li>
                   <li class="main-nav__item">
-                    <a class="main-nav__link subhead-mid" href="https://htmlacademy.ru/intensive/adaptive" rel="noopener" rel="nofollow">HTML Academy</a>
+                    <a class="main-nav__link subheading" href="https://htmlacademy.ru/intensive/adaptive" rel="noopener" rel="nofollow">HTML Academy</a>
                   </li>
                 </ul>
               </div>
@@ -57,7 +57,7 @@
         <div class="intro-share page-header__btm">
           <!-- Accessibility: heading is invisible to sr, because section photofeed has an accessible alternative -->
           <div class="intro-share__message page-header__btm-message">
-            <h2 class="intro-share__heading subhead-top" aria-hidden="true">Фотографии пользователей</h2>
+            <h2 class="intro-share__heading heading" aria-hidden="true">Фотографии пользователей</h2>
           </div>
         </div>
       </div>
@@ -341,10 +341,10 @@
             </div>
             <div class="photo-editor__btns">
               <div class="photo-editor__btn-submit">
-                <button class="btn btn--submit-share subhead-mid" type="submit">Запостить</button>
+                <button class="btn btn--submit-share subheading" type="submit">Запостить</button>
               </div>
               <div class="photo-editor__btn-abort">
-                <button class="btn btn--abort-share subhead-mid" type="reset">Отмена</button>
+                <button class="btn btn--abort-share subheading" type="reset">Отмена</button>
               </div>
             </div>
           </div>
