--- a/source/form.html
+++ b/source/form.html
@@ -38,17 +38,17 @@
               <div class="main-nav__dropdown-inner">
                 <ul class="main-nav__list">
                   <li class="main-nav__item">
-                    <a class="main-nav__link subhead-mid" href="index.html">Главная</a>
+                    <a class="main-nav__link subheading" href="index.html">Главная</a>
                   </li>
                   <li class="main-nav__item">
-                    <a class="main-nav__link subhead-mid" href="photo.html">Фотографии</a>
+                    <a class="main-nav__link subheading" href="photo.html">Фотографии</a>
                   </li>
                   <!-- Accessibility: used aria-current-->
                   <li class="main-nav__item">
-                    <a class="main-nav__link subhead-mid" href="#" aria-current="page">Конкурс</a>
+                    <a class="main-nav__link subheading" href="#" aria-current="page">Конкурс</a>
                   </li>
                   <li class="main-nav__item">
-                    <a class="main-nav__link subhead-mid" href="https://htmlacademy.ru/intensive/adaptive" rel="noopener" rel="nofollow">HTML Academy</a>
+                    <a class="main-nav__link subheading" href="https://htmlacademy.ru/intensive/adaptive" rel="noopener" rel="nofollow">HTML Academy</a>
                   </li>
                 </ul>
               </div>
@@ -57,7 +57,7 @@
         </div>
         <div class="intro-contest page-header__btm">
           <div class="intro-contest__message page-header__btm-message">
-            <h2 class="intro-contest__heading subhead-top">Конкурс на самое безбашенное путешествие с Пинк</h2>
+            <h2 class="intro-contest__heading heading">Конкурс на самое безбашенное путешествие с Пинк</h2>
           </div>
         </div>
       </div>
@@ -281,11 +281,11 @@
     <div class="form__modal-dialog" aria-label="modal-dialog">
       <div class="success-popup form__modal-success" aria-modal="true">
         <div class="success-popup__message">
-          <h3 class="success-popup__heading subhead-mid">Ваша заявка отправлена</h3>
+          <h3 class="success-popup__heading subheading">Ваша заявка отправлена</h3>
           <p class="success-popup__text body-text">Спасибо за ваше участие, ваша заявка уже поступила к нам. В ближайшее время мы рассмотрим ее и оповестим вас.</p>
         </div>
         <div class="success-popup__btn success-popup__btn--bottom">
-          <button class="btn btn--modal-ok subhead-mid" type="button">Закрыть окно</button>
+          <button class="btn btn--modal-ok subheading" type="button">Закрыть окно</button>
         </div>
       </div>
     </div>
@@ -293,11 +293,11 @@
     <div class="form__modal-dialog" aria-label="modal-dialog">
       <div class="error-popup form__modal-error" aria-modal="true">
         <div class="error-popup__message">
-          <h3 class="error-popup__heading subhead-mid">Что-то пошло не так!</h3>
+          <h3 class="error-popup__heading subheading">Что-то пошло не так!</h3>
           <p class="error-popup__text body-text">Проверьте поля, выделенные красным,скорее всего вы забыли их заполнить.</p>
         </div>
         <div class="error-popup__btn error-popup__btn--bottom">
-          <button class="btn btn--modal-close subhead-mid" type="button">OK</button>
+          <button class="btn btn--modal-close subheading" type="button">OK</button>
         </div>
       </div>
     </div>
