Добавили класс модификатор для индикации активного пункта меню

--- a/source/form.html
+++ b/source/form.html
@@ -44,7 +44,7 @@
                     <a class="main-nav__link subheading" href="photo.html">Фотографии</a>
                   </li>
                   <!-- Accessibility: used aria-current-->
-                  <li class="main-nav__item">
+                  <li class="main-nav__item main-nav__item--active">
                     <a class="main-nav__link subheading" href="#" aria-current="page">Конкурс</a>
                   </li>
                   <li class="main-nav__item">
