--- a/source/index.html
+++ b/source/index.html
@@ -34,7 +34,7 @@
               <div class="main-nav__dropdown-inner">
                 <ul class="main-nav__list">
                   <!-- Accessibility: used aria-current-->
-                  <li class="main-nav__item ">
+                  <li class="main-nav__item main-nav__item--active">
                     <a class="main-nav__link subheading" href="#" aria-current="page">Главная</a>
                   </li>
                   <li class="main-nav__item">
