--- a/source/photo.html
+++ b/source/photo.html
@@ -40,7 +40,7 @@
                     <a class="main-nav__link subheading" href="index.html">Главная</a>
                   </li>
                   <!-- Accessibility: used aria-current-->
-                  <li class="main-nav__item">
+                  <li class="main-nav__item main-nav__item--active">
                     <a class="main-nav__link subheading" href="#" aria-current="page">Фотографии</a>
                   </li>
                   <li class="main-nav__item">
