--- a/source/photo.html
+++ b/source/photo.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Приложение для всех. Поднимает настроение. Меняет мир вокруг.">
     <link rel="stylesheet" href="css/style.css">
   </head>
-  <body>
+  <body class="opensans">
     <!-- Add to header bg-color + bg-img -->
     <header class="page-header">
       <!-- Accessibility: hidden heading -->
