Откорректировали структуру разметки — удалили общие обертки (inner'ы) и внесли независимые. Плюс удалили общий класс inner во всех документах html

--- a/source/form.html
+++ b/source/form.html
@@ -16,8 +16,8 @@
       <div class="skip-to-main">
         <a class="skip-to-main__link sr-shortcut" href="#skip-to-main">Skip to main content</a>
       </div>
-      <div class="page-header__inner inner">
-        <div class="page-header__top">
+      <div class="page-header__top">
+        <div class="page-header__top-inner">
           <div class="logo page-header__logo">
             <a class="logo__link" href="index.html">
               <!-- svg logo -->
@@ -55,7 +55,9 @@
             </div>
           </nav>
         </div>
-        <div class="intro-contest page-header__btm">
+      </div>
+      <div class="intro-contest page-header__btm">
+        <div class="intro-contest__inner">
           <div class="intro-contest__message page-header__btm-message">
             <h2 class="intro-contest__heading heading">Конкурс на самое безбашенное путешествие с Пинк</h2>
           </div>
@@ -65,7 +67,7 @@
     <!-- Accessibility skip-to-main-->
     <main class="main-content" id="skip-to-main" tabindex="-1">
       <section class="contestform">
-        <div class="contestform__inner inner">
+        <div class="contestform__inner">
           <!-- Accessibility: hidden heading -->
           <h2 class="sr-only visually-hidden">Заполните форму</h1>
           <div class="contest-message contestform__message">
@@ -235,7 +237,7 @@
       </section>
     </main>
     <footer class="page-footer">
-      <div class="page-footer__inner inner">
+      <div class="page-footer__inner">
         <!-- footer svg logo -->
         <div class="logo-footer page-footer__logo">
           <img class="logo-footer__img" src="http://placehold.it/147x40" width="147" height="40" alt="Pink footer logo">
