Откорректировали ошибку в классе intro-share__inner (в photo.html)

--- a/source/photo.html
+++ b/source/photo.html
@@ -56,7 +56,7 @@
         </div>
       </div>
       <div class="intro-share page-header__btm">
-        <div class="into-share__inner">
+        <div class="intro-share__inner">
           <!-- Accessibility: heading is invisible to sr, because section photofeed has an accessible alternative -->
           <div class="intro-share__message page-header__btm-message">
             <h2 class="intro-share__heading heading" aria-hidden="true">Фотографии пользователей</h2>
