Удалили класс opensans у тега body и добавили его тегу html. Плюс внесли во все html файлы комментарий касательно переключения меню и внешнего вида кнопки

--- a/source/form.html
+++ b/source/form.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="ru">
+<!-- Переключение меню и внешнего вида кнопки по классу show-main-nav -->
+<html lang="ru" class="opensans">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,7 +8,7 @@
     <meta name="description" content="Приложение для всех. Поднимает настроение. Меняет мир вокруг.">
     <link rel="stylesheet" href="css/style.css">
   </head>
-  <body class="opensans">
+  <body>
     <!-- Add to header bg-color + bg-img -->
     <header class="page-header">
       <!-- Accessibility: hidden heading -->
