--- a/source/photo.html
+++ b/source/photo.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="ru" class="opensans">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,7 +7,7 @@
     <meta name="description" content="Приложение для всех. Поднимает настроение. Меняет мир вокруг.">
     <link rel="stylesheet" href="css/style.css">
   </head>
-  <body class="opensans">
+  <body>
     <!-- Add to header bg-color + bg-img -->
     <header class="page-header">
       <!-- Accessibility: hidden heading -->
