Удалили класс opensans у тега body и добавили его тегу html. Внесли в html файлы комментарий касательно переключения меню и внешнего вида кнопки

--- a/source/photo.html
+++ b/source/photo.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!-- Переключение меню и внешнего вида кнопки по классу show-main-nav тег html -->
 <html lang="ru" class="opensans">
   <head>
     <meta charset="UTF-8">
